# BLAKE2-cmake

./: .gitignore  CMakeLists.txt
b2sum/: CMakeLists.txt
bench/: CMakeLists.txt
neon/: CMakeLists.txt
power8/: CMakeLists.txt
ref/: CMakeLists.txt
sse/: CMakeLists.txt
